# helpers

./: CMakeLists.txt  README.md  main.cpp  sonar-project.properties
.github/workflows/: sonarcloud.yml
helpers/: helpers.h  json.h  tests.h
